# NEAT_slimevolley

./: .gitignore  neat_train.py  prettyNEAT_demo.ipynb  pyproject.toml  visualize_evolution.py
domain/: cartpole_swingup.py  config.py  make_env.py
log/: act5_spec.out  act5_stats.out  debug_slimevolley_best.out  debug_slimevolley_spec.out  debug_slimevolley_stats.out  feature_spec.out  feature_stats.out  result_fitDist.out  slime_dev_best.out  slime_dev_spec.out  slime_dev_stats.out  success10_spec.out  success10_stats.out  success11_spec.out  success11_stats.out  success12_best.out  success12_spec.out  success12_stats.out  success13_spec.out  success13_stats.out  success1_spec.out  success1_stats.out  success2_spec.out  success2_stats.out  success3_spec.out  success3_stats.out  success4_spec.out  success4_stats.out  success5_spec.out  success5_stats.out  success6_spec.out  success6_stats.out  success7_spec.out  success7_stats.out  success8_spec.out  success8_stats.out  success9_spec.out  success9_stats.out  survival_spec.out  survival_stats.out  (+2 more)
log/act5_best/: 0008.out  0032.out  0056.out  0064.out  0096.out  0112.out  0128.out  0136.out  0152.out  0160.out  0200.out  0248.out
log/act5_pop/: ind_10.out  ind_100.out  ind_101.out  ind_102.out  ind_103.out  ind_104.out  ind_105.out  ind_106.out  ind_107.out  ind_108.out  ind_109.out  ind_11.out  ind_110.out  ind_111.out  ind_112.out  ind_113.out  ind_114.out  ind_115.out  ind_116.out  ind_117.out  ind_118.out  ind_119.out  ind_12.out  ind_120.out  ind_13.out  (+100 more)
neat_src/: ann.py
p/: default_neat.json  slimevolley.json
(+2280 files in other folders)
