[project]
name = "prettyneat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "gym==0.9.6",
    "ipykernel>=6.29.5",
    "matplotlib>=3.7.5",
    "mpi4py>=3.0.0",
    "networkx>=3.1",
    "opencv-python>=4.12.0.88",
    "pyglet==1.5.31",
    "seaborn>=0.13.2",
    "setuptools>=75.3.2",
]
